--- a/famima.html
+++ b/famima.html
@@ -1,1 +1,79 @@
-<h1>ファミリーマート<h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="ja">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<title>ファミリーマート</title>
+<link rel="stylesheet" href="family.css/style.css" type="text/css">
+</head>
+
+<body>
+<div id="header">
+	<h1><a href="index.html"><img src="images/download2.png" width="150" height="80" alt="ファミリーマート"></a></h1>
+	<div id="nav">
+		<ul>
+			<li><a href="seven.html"><img src="images/seven.jpg" width="100" height="50" ></a></li>
+			<li><a href="rowson.html"><img src="images/lowson.jpg" width="100" height="50"></a></li>
+			<li><a href="ministop.html"><img src="images/download.png" width="100" height="50"></a></li>
+            <li><a href="famima.html"><img src="images/download2.png" width="100" height="50"></a></li>
+            <li><a href="opinion.html"><img src="images/opinion.jpg" width="100" height="50" alt="ご意見・ご要望"></a></li>
+		</ul>
+	</div>
+</div>
+<div id="contents">
+	<div id="main">
+		<p id="graphic"><img src="images/ファミマ.jpg" width="1500" height="500" alt="ファミマ"></p>
+		<div id="section">
+			<h2>ファミリーマート新商品(04/21～04/28)</h2>
+            <table>
+                <tr>
+                    <th style="color:blue">醤油ラーメン風<br>おむすび</th> 
+                    <th style="color:blue">スーパー大麦<br>梅ゆかり(R)</th> 
+                    <th style="color:blue">ねぎ玉牛丼</th>
+                    <th style="color:blue">チキンライス&<br>旨辛チキンカツ弁当</th>
+                    <th style="color:blue">サラダ巻2種</th> 
+                    <th style="color:blue">ブルーベリーとレアチーズクリームのサンド</th> 
+                    <th style="color:blue">和のたまごサンド（煮たまご）</th>
+                    <th style="color:blue">チョコあんぱん（ホイップクリーム入り）</th>
+                </tr>
+                <tr>
+                    <td align="reft"><img src="images/1jpg.jpg" width="150" height="150"></td>
+                    <td align="reft"><img src="images/2.jpg" width="150" height="150"></td> 
+                    <td align="reft"><img src="images/3.jpg" width="150" height="150"></td>
+                    <td align="reft"><img src="images/4.jpg" width="150" height="150"></td>
+                    <td align="reft"><img src="images/5.jpg" width="150" height="150"></td>
+                    <td align="reft"><img src="images/6.jpg" width="150" height="150"></td> 
+                    <td align="reft"><img src="images/7.jpg" width="150" height="150"></td>
+                    <td align="reft"><img src="images/8.jpg" width="150" height="150"></td>
+                </tr>
+                <tr>
+                    <td align="reft">１３５円</td>
+                    <td align="reft">１１６円</td> 
+                    <td align="reft">４６２円</td>
+                    <td align="reft">４６２円</td>
+                    <td align="reft">３９９円</td>
+                    <td align="reft">２２１円</td> 
+                    <td align="reft">２６９円</td>
+                    <td align="reft">１１２円</td>
+                </tr>
+
+                <tr>
+                    <td align="reft">（税込み１４５円）</td> 
+                    <td align="reft">（税込み１２５円）</td> 
+                    <td align="reft">（税込み４９８円）</td>
+                    <td align="reft">（税込み４９８円）</td>
+                    <td align="reft">（税込み４３０円）</td> 
+                    <td align="reft">（税込み２３８円）</td> 
+                    <td align="reft">（税込み２９０円）</td>
+                    <td align="reft">（税込み１２０円）</td>
+                </tr>
+            </table>
+		</div>
+	</div>
+	
+</div>
+<div id="footer">
+	<p>Copyright 2014 HAPPINESS FITNESS CLUB All rights reserved.</p>
+</div>
+</body>
+</html>
