--- a/rowson.html
+++ b/rowson.html
@@ -1,1 +1,78 @@
-<h1>ローソン</h1>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="ja">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<title>ローソン</title>
+<link rel="stylesheet" href="css/style.css" type="text/css">
+</head>
+
+<body>
+<div id="header">
+	<h1><img src="images/logo.png" width="203" height="70" alt="ローソン"></h1>
+	<div id="nav">
+		<ul>
+			<li><a href="info.html"><img src="images/nav1.png" width="173" height="50" alt="施設のご案内"></a></li>
+			<li><a href="fee.html"><img src="images/nav2.png" width="173" height="50" alt="料金プラン"></a></li>
+			<li><a href="opinion.html"><img src="images/nav3.png" width="173" height="50" alt="ご意見・ご要望"></a></li>
+		</ul>
+	</div>
+</div>
+<div id="contents">
+	<div id="main">
+		<p id="graphic"><img src="images/ローソンmain.jpg" width="1500" height="500" alt="ローソンでかい写真"></p>
+		<div id="section">
+			<h2>ローソン新商品</h2>
+            <table align="center">
+                <tr>
+                    <th>かぶと型ケーキ</th>
+                    <th>苺のミニホールケーキ</th>
+                    <th>苺ショート＆チョコケーキ</th>
+                    <th>大きなもち食感ロール<br>(苺ジャム＆クリーム)</th>
+                    <th>トリプルプリンアラモード</th>
+                    <th>ふんわりワッフル<br>(チョコとカスタード)6個</th>
+                    <th>マカロン　3個入り</th>
+                    <th>ふかふかもっちの<br>カステラケーキ</th>
+                </tr>
+                <tr>
+                    <td><img src="images/img1.jpg" width="180" height="180" alt="かぶと型ケーキ"></td>
+                    <td><img src="images/img2.jpg" width="180" height="180" alt="苺のミニホールケーキ"></td>
+                    <td><img src="images/img3.jpg" width="180" height="180" alt="苺ショート＆チョコケーキ"></td>
+                    <td><img src="images/img4.jpg" width="180" height="180" alt="大きなもち食感ロール(苺ジャム＆クリーム)"></td>
+                    <td><img src="images/img5.jpg" width="180" height="180" alt="トリプルプリンアラモード"></td>
+                    <td><img src="images/img6.jpg" width="180" height="180" alt="ふんわりワッフル(チョコとカスタード)6個"></td>
+                    <td><img src="images/img7.jpg" width="180" height="180" alt="マカロン　3個入り"></td>
+                    <td><img src="images/img8.jpg" width="180" height="180" alt="ふかふかもっちのカステラケーキ"></td>
+                </tr>
+                <tr>
+                    <td>500円(税込)</td>
+                    <td>550円(税込)</td>
+                    <td>550円(税込)</td>
+                    <td>480円(税込)</td>
+                    <td>600円(税込)</td>
+                    <td>420円(税込)</td>
+                    <td>420円(税込)</td>
+                    <td>140円(税込)</td>
+                </tr>
+                <tr >
+                    <td >かぶとをモチーフにした見た目のボンブケーキ。ボンブ形状のチョコムースの中に、とろ～りとしたチョコソースを入れ、苺を1粒トッピングしました。金色の飾りを付けて、かぶとをイメージした見た目に仕上げた、こどもの日向けのケーキです。</td>
+                    <td>口どけがよく乳味とコクを感じられるホイップクリームを使用しました。ふんわりとしたスポンジで果肉感のある苺プレザーブを1層サンドし、苺2粒をトッピングした、3号サイズのショートケーキです。一人でも食べ切れる小振りなサイズのケーキです。</td>
+                    <td>口どけのよいホイップクリームを使用し、あまおう苺を使用した甘酸っぱい苺ジャムをサンドして苺をトッピングしたショートケーキと、チョコ風味豊かなチョコケーキを組み合わせた2個入り商品です。</td>
+                    <td>2色の水玉模様で仕立てたもち食感ロール生地で、北海道産生乳入りクリームと苺ジャムを巻き込んだ大きなもち食感ロールです。</td>
+                    <td>カスタードクリームの上にスポンジ、黄桃や白桃をのせて、その上にクリームとプリン3個をトッピングしました。ボリュームがあり、シェアしやすいプリンアラモードです。</td>
+                    <td>マダガスカル産バニラビーンズ入りのカスタードクリームのワッフル3個とベルギー産チョコレートを使用したチョコクリームのワッフルを3個詰めた6個入りのふんわりワッフルです。家族、親戚、友人などみんなで楽しめます。</td>
+                    <td>いちごはあまおう苺ピューレと濃縮あまおう苺果汁、生クリームを使用したガナッシュクリーム。バニラは生クリームとマダガスカル産のバニラビーンズを使用した、バニラ風味豊かなガナッシュクリーム。ピスタチオはピスタチオペーストと生クリームを加えたガナッシュクリームの3個のマカロンです。</td>
+                    <td>カステラ風のボリュームがあり、もっちりとした生地に、口どけのよいホイップクリームをサンドしました。カステラのように見た目も四角い形状に仕上げました。</td>
+                </tr>
+            </table>
+            
+			<p></p>
+		</div>
+	</div>
+	
+</div>
+<div id="footer">
+	<p></p>
+</div>
+</body>
+</html>
