--- a/index.html
+++ b/index.html
@@ -1,42 +1,76 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="ja">
+
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <title>HAPPINESS FITNESS CLUB</title>
 <link rel="stylesheet" href="css/style.css" type="text/css">
+<style type="text/css">
+#photo {
+    width: 1100px;
+    height: 500px;
+    margin: 0 auto;
+    text-align: left;
+    overflow: hidden;
+    position: relative;
+}
+
+#photo img {
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+</style>
+
+
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+<script type="text/javascript">
+$(function(){
+    var setImg = '#photo';
+    var fadeSpeed = 1600;
+    var switchDelay = 5000;
+
+    $(setImg).children('img').css({opacity:'0'});
+    $(setImg + ' img:first').stop().animate({opacity:'1',zIndex:'20'},fadeSpeed);
+
+    setInterval(function(){
+        $(setImg + ' :first-child').animate({opacity:'0'},fadeSpeed).next('img').animate({opacity:'1'},fadeSpeed).end().appendTo(setImg);
+    },switchDelay);
+});
+</script>
 </head>
 
 <body>
 <div id="header">
-	<h1><img src="images/logo.png" width="203" height="70" alt="ハピネスフィットネスクラブ"></h1>
+	<h1><a href="index.html"><img src="images/top.jpg" width="300" height="70" alt="ハピネスフィットネスクラブ"></a></h1>
 	<div id="nav">
 		<ul>
-			<li><a href="info.html"><img src="images/nav1.png" width="173" height="50" alt="施設のご案内"></a></li>
-			<li><a href="fee.html"><img src="images/nav2.png" width="173" height="50" alt="料金プラン"></a></li>
-			<li><a href="opinion.html"><img src="images/nav3.png" width="173" height="50" alt="ご意見・ご要望"></a></li>
+			<li><a href="famima.html"><img src="images/famima.jpg" width="80" height="50" alt="ファミリーマート"></a></li>
+			<li><a href="rowson.html"><img src="images/lawson.jpg" width="80" height="50" alt="ローソン"></a></li>
+			<li><a href="ministop.html"><img src="images/ministop.jpg" width="80" height="50" alt="セブンイレブン"></a></li>
+            <li><a href="seven.html"><img src="images/seven.png" width="80" height="50" alt="セブンイレブン"></a></li>
+            <li><a href="opinion.html"><img src="images/opinion.jpg" width="80" height="50" alt="レビュー"></a></li>
+            
 		</ul>
 	</div>
 </div>
-<div id="contents">
+<div id="contents3">
 	<div id="main">
-		<p id="graphic"><img src="images/graphic.jpg" width="570" height="300" alt="ハピネスフィットネスクラブでは さまざまなプログラムをご用意しております。"></p>
+		<div id="photo">
+            <img src="images/gazou1.png" width="1000" height="500" alt="">
+            <img src="images/se.jpg" width="1000" height="500" alt="">
+            <img src="images/gazou4.jpg" width="1000" height="500" alt="">
+        </div>
 		<div id="section">
-			<h2>今月のお知らせ</h2>
-			<p>入会された方に、ミネラルウォーターをプレゼントいたします。<br>運動中の水分補給にお使いください。</p>
-		</div>
-	</div>
-	<div id="sub">
-		<div id="aside">
-			<ul>
-				<li><a href="info.html"><img src="images/bnr_info.png" width="200" height="80" alt="施設のご案内"></a></li>
-				<li><a href="opinion.html"><img src="images/bnr_opinion.png" width="200" height="50" alt="ご意見・ご要望"></a></li>
-			</ul>
+			<h2> 初めに．．．</h2>
+			<p>コンビニのそれぞれの特徴やその店の商品について調べてみました。よろしければ、レビューにアンケートやご意見をよろしくお願いします。</p>
 		</div>
 	</div>
 </div>
+    
 <div id="footer">
-	<p>Copyright 2014 HAPPINESS FITNESS CLUB All rights reserved.</p>
+	<p>（仮）Oya_project</p>
 </div>
 </body>
 </html>
