--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ $(function(){
 	<h1><a href="index.html"><img src="images/top.jpg" width="300" height="70" alt="ハピネスフィットネスクラブ"></a></h1>
 	<div id="nav">
 		<ul>
-			<li><a href="famima.html"><img src="images/famima.jpg" width="80" height="50" alt="ファミリーマート"></a></li>
+			<li><a href="famima.html"><img src="images/familyMart.jpg" width="80" height="50" alt="ファミリーマート"></a></li>
 			<li><a href="rowson.html"><img src="images/lawson.jpg" width="80" height="50" alt="ローソン"></a></li>
 			<li><a href="ministop.html"><img src="images/ministop.jpg" width="80" height="50" alt="セブンイレブン"></a></li>
             <li><a href="seven.html"><img src="images/seven.png" width="80" height="50" alt="セブンイレブン"></a></li>
