--- a/famima.html
+++ b/famima.html
@@ -9,20 +9,20 @@
 
 <body>
 <div id="header">
-	<h1><a href="index.html"><img src="images/download2.png" width="150" height="80" alt="ファミリーマート"></a></h1>
+	<h1><a href="index.html"><img src="images/top.jpg" width="203" height="70" alt="ファミリーマート"></a></h1>
 	<div id="nav">
 		<ul>
-			<li><a href="seven.html"><img src="images/seven.jpg" width="100" height="50" ></a></li>
-			<li><a href="rowson.html"><img src="images/lowson.jpg" width="100" height="50"></a></li>
-			<li><a href="ministop.html"><img src="images/download.png" width="100" height="50"></a></li>
-            <li><a href="famima.html"><img src="images/download2.png" width="100" height="50"></a></li>
+			<li><a href="seven.html"><img src="images/seven.png" width="100" height="50" ></a></li>
+			<li><a href="rowson.html"><img src="images/lawson.jpg" width="100" height="50"></a></li>
+			<li><a href="ministop.html"><img src="images/ministop.jpg" width="100" height="50"></a></li>
+            <li><a href="famima.html"><img src="images/familyMart.jpg" width="100" height="50"></a></li>
             <li><a href="opinion.html"><img src="images/opinion.jpg" width="100" height="50" alt="ご意見・ご要望"></a></li>
 		</ul>
 	</div>
 </div>
 <div id="contents">
 	<div id="main">
-		<p id="graphic"><img src="images/ファミマ.jpg" width="1500" height="500" alt="ファミマ"></p>
+		<p id="graphic"><img src="images/ファミマ.jpg" width="1200" height="500" alt="ファミマ"></p>
 		<div id="section">
 			<h2>ファミリーマート新商品(04/21～04/28)</h2>
             <table>
@@ -73,7 +73,7 @@
 	
 </div>
 <div id="footer">
-	<p>Copyright 2014 HAPPINESS FITNESS CLUB All rights reserved.</p>
+	<p>（仮）Oya_project</p>
 </div>
 </body>
 </html>
