--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<title>HAPPINESS FITNESS CLUB</title>
-<link rel="stylesheet" href="css/style.css" type="text/css">
+<title>トップページ</title>
+<link rel="stylesheet" href="index.css/style.css" type="text/css">
 <style type="text/css">
 #photo {
     width: 1100px;
@@ -43,15 +43,14 @@ $(function(){
 
 <body>
 <div id="header">
-	<h1><a href="index.html"><img src="images/top.jpg" width="300" height="70" alt="ハピネスフィットネスクラブ"></a></h1>
+	<h1><a href="index.html"><img src="images/top.jpg" width="203" height="70" alt="トップページ"></a></h1>
 	<div id="nav">
 		<ul>
-			<li><a href="famima.html"><img src="images/familyMart.jpg" width="80" height="50" alt="ファミリーマート"></a></li>
-			<li><a href="rowson.html"><img src="images/lawson.jpg" width="80" height="50" alt="ローソン"></a></li>
-			<li><a href="ministop.html"><img src="images/ministop.jpg" width="80" height="50" alt="セブンイレブン"></a></li>
-            <li><a href="seven.html"><img src="images/seven.png" width="80" height="50" alt="セブンイレブン"></a></li>
-            <li><a href="opinion.html"><img src="images/opinion.jpg" width="80" height="50" alt="レビュー"></a></li>
-            
+			<li><a href="seven.html"><img src="images/seven.png" width="100" height="50" ></a></li>
+			<li><a href="rowson.html"><img src="images/lawson.jpg" width="100" height="50"></a></li>
+			<li><a href="ministop.html"><img src="images/ministop.jpg" width="100" height="50"></a></li>
+            <li><a href="famima.html"><img src="images/familyMart.jpg" width="100" height="50"></a></li>
+            <li><a href="opinion.html"><img src="images/opinion.jpg" width="100" height="50" alt="ご意見・ご要望"></a></li>
 		</ul>
 	</div>
 </div>
@@ -64,13 +63,13 @@ $(function(){
         </div>
 		<div id="section">
 			<h2> 初めに．．．</h2>
-			<p>コンビニのそれぞれの特徴やその店の商品について調べてみました。よろしければ、レビューにアンケートやご意見をよろしくお願いします。</p>
+			<p>コンビニのそれぞれの商品・新商品について調べてみました。よろしければ、レビューにアンケートやご意見をよろしくお願いします。</p>
 		</div>
 	</div>
 </div>
     
 <div id="footer">
-	<p>（仮）Oya_project</p>
+	<p>(仮)Oya_project</p>
 </div>
 </body>
 </html>
