--- a/rowson.html
+++ b/rowson.html
@@ -4,17 +4,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <title>ローソン</title>
-<link rel="stylesheet" href="css/style.css" type="text/css">
+<link rel="stylesheet" href="lowson.css/lawson.css" type="text/css">
 </head>
 
 <body>
 <div id="header">
-	<h1><img src="images/logo.png" width="203" height="70" alt="ローソン"></h1>
+	<h1><a href="index.html"><img src="images/top.jpg" width="203" height="70" alt="ローソン"></a></h1>
 	<div id="nav">
 		<ul>
-			<li><a href="info.html"><img src="images/nav1.png" width="173" height="50" alt="施設のご案内"></a></li>
-			<li><a href="fee.html"><img src="images/nav2.png" width="173" height="50" alt="料金プラン"></a></li>
-			<li><a href="opinion.html"><img src="images/nav3.png" width="173" height="50" alt="ご意見・ご要望"></a></li>
+			<li><a href="seven.html"><img src="images/seven.png" width="100" height="50" ></a></li>
+			<li><a href="rowson.html"><img src="images/lawson.jpg" width="100" height="50"></a></li>
+			<li><a href="ministop.html"><img src="images/ministop.jpg" width="100" height="50"></a></li>
+            <li><a href="famima.html"><img src="images/familyMart.jpg" width="100" height="50"></a></li>
+            <li><a href="opinion.html"><img src="images/opinion.jpg" width="100" height="50" alt="ご意見・ご要望"></a></li>
 		</ul>
 	</div>
 </div>
@@ -72,7 +74,7 @@
 	
 </div>
 <div id="footer">
-	<p></p>
+	<p>（仮）Oya_project</p>
 </div>
 </body>
 </html>
